--- a/assignment1/atemp1/Menu.html
+++ b/assignment1/atemp1/Menu.html
@@ -10,21 +10,21 @@
 		<div class="menu-item col-lg-4 col-md-6">
 			<div class="container">
 				<div class="title" id="chick">Chicken</div>
-				<p>very good</p>
+				<p>u may want to explicitly set a font-family for the text in your page, so you are not stuck with the default browser font family. Also, set</p>
 		</div>
 	</div>
 	<div class="row">
 		<div class="menu-item col-lg-4 col-md-6">
 			<div class="container">
 				<div class="title" id="beef">Beef</div>	
-				<p>very good</p>
+				<p>u may want to explicitly set a font-family for the text in your page, so you are not stuck with the default browser font family. Also, set</p>
 		</div>
 	</div>
 	<div class="row">
 		<div class="menu-item col-lg-4 col-md-12">
 			<div class="container">
 				<div class="title" id="Sushi">Sushi</div>
-				<p>verydddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddd good</p>
+				<p>u may want to explicitly set a font-family for the text in your page, so you are not stuck with the default browser font family. Also, set</p>
 		</div>
 	</div>	
 </body>
