--- a/assignment2/menu.html
+++ b/assignment2/menu.html
@@ -1,17 +1,16 @@
 <html>
-<head>
- <meta charset="utf-8">
+  <head>
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
-	<link href="bootstrap/dist/css/bootstrap.min.css" rel="stylesheet"/>
-
-	<link href="menu.css" rel="stylesheet"/>
-	<title> our Menu</title>
-</head>
+    <link href="bootstrap/dist/css/bootstrap.min.css" rel="stylesheet"/>
+    <link href="menu.css" rel="stylesheet"/>
+    <title> our Menu</title>
+  </head>
 
 <body>
-<div class="custom-container">
+  <a name="top"></a>
+  <div class="custom-container">
       <nav class="navbar navbar-default">
         <div class="container-fluid">
           <div class="navbar-header">
@@ -34,14 +33,66 @@
           </div><!--/.nav-collapse -->
         </div><!--/.container-fluid -->
       </nav>
-</div>  
-	
-<h1 class="text-center" id="menutitle">Our Menu </h1> 
+</div>
 
-<div id="main-content" class="container-fluid">
-  <div id="contenuto" class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
-    <h2 class="text-center">Chicken</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+
+  <h1> 
+    Our Menu
+  </h1>
+ 
+<div class="container-fluid">
+          <div class="menu-content col-lg-4 col-md-6 col-sm-12 col-xs-12">
+          <div class="box">
+            <h2 class="text-center">
+              Chicken
+            </h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem 
+    ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </p>
+            <p>(End of Chicken)
+               <a href="#top">
+                 Back to top
+               </a>
+            </p>   
+        </div>
+	      </div>
+   
+		    <div class="menu-content col-lg-4 col-md-6 col-sm-12 col-xs-12">
+				  <div class="box">
+          <h2 class="text-center" >Beef</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem 
+    ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </p>
+            <p>(End ofBeef)
+              <a href="#top">Back to top </a>
+            </p>   
+				  </div>
+		    </div>
+
+        <div class="menu-content col-lg-4 col-md-12 col-sm-12 col-xs-12">
+				  <div class="box">
+          <h2 class="text-center" >Sushi</h2>
+				    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
     tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
     quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
     consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
@@ -53,35 +104,14 @@
     consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
     cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
     proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    <p>(End of Chicken) 
-    <a class="btn btn-lg btn-primary" href="../../components/#navbar" role="button"> back to top »</a>
-    </p>
-  </div>
-  <div id="contenuto" class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
-    <h2 class="text-center">Beef</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    <p>(End of Beef) 
-    <a class="btn btn-lg btn-primary" href="../../components/#navbar" role="button"> back to top »</a>
-    </p>    
-  </div>
-  <div id="contenuto" class="col-lg-4 col-md-12 col-xs-12">
-    <h2 class="text-center">Sushi</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-     <p>(End of Sushi)
-    <a class="btn btn-lg btn-primary" href="../../components/#navbar" role="button">Back to top »</a>
-    </p>   
+          <p>(End of Sushi)
+            <a href="#top">Back to top </a>
+          </p>
+        </div>   
+        </div>
+    </div>	
 
-</div>
+
 <script src="https://code.jquery.com/jquery-2.1.3.js"></script>
 <script src="bootstrap/dist/js/bootstrap.js"></script>
 </body>
